--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@ body {
     @apply text-pink-500
   }
   .scheduled {
-    @apply border-sky-500 
+    @apply border-yellow-400 
   }
   .scheduled > p {
     @apply text-blue-500
