--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  @apply bg-gray-900 text-zinc-50 scrollbar-thin scrollbar-track-gray-950 scrollbar-thumb-white;
+  @apply bg-gray-900 text-zinc-50 scrollbar-thin scrollbar-track-gray-950 scrollbar-thumb-white scroll-smooth;
 }
 
 @layer components {
