--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,10 +5,11 @@
 :root {
   --shadow-color: #ff9e9e;
   --shadow-color-light: white;
+  color-scheme: dark;
 }
 
 body {
-  @apply bg-gray-900 text-zinc-50 scrollbar-thin scrollbar-track-gray-950 scrollbar-thumb-white scroll-smooth
+  @apply bg-gray-900 text-zinc-50 scrollbar-thin scrollbar-track-gray-950 scrollbar-thumb-white scroll-smooth;
 }
 
 @layer components {
@@ -39,4 +40,15 @@ body {
   .passed {
     @apply border-gray-500 text-gray-400;
   }
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#tabs-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#tabs-container {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
